Do not use a fixed width for #wrap in ye olde ie

--- a/source/stylesheets/ie.scss
+++ b/source/stylesheets/ie.scss
@@ -146,10 +146,6 @@ nav.breadcrumbs a {
 
 // Layout
 
-#wrap {
-  width: 970px;
-}
-
 .ie8 img {
 	width: auto;
 }
